# perfecthash

./: .envrc.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .roborev.toml  .vimrc  ADS.md  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CNAME  IOCP-LOGS.md  IOCP-PROMPT.md  IOCP-README.md  IOCP-TOOD.md  LICENSE  OSX-LOG.md  OSX-TODO.md  PYTHON-CLI-AND-API-LOG.md  PYTHON-CLI-AND-API-NOTES.md  PYTHON-CLI-AND-API-TODO.md  README-python.md  README.md  RELEASE-NOTES.md  ROBOREV-BOOTSTRAP.md  ROBOREV-CONTEXT.md  ROBOREV-LOCAL.md  ROBOREV-PLAYBOOK.md  TODO.md  USAGE.txt  _quarto.yml  appveyor.yml  asm.xml  build.sh  c.xml  dependencies.yaml  hatch_build.py  index.qmd  (+8 more)
examples/cmake-fetchcontent-consumer/: CMakeLists.txt  README.md
examples/cpp-console-cuco-static-map-bench/: CMakeLists.txt  README.md
examples/cpp-console-cuco-static-multiset-bench/: CMakeLists.txt  README.md
examples/cpp-console-online-cuda-nvrtc/: CMakeLists.txt  README.md
examples/cpp-console-online-jit/: CMakeLists.txt  README.md
examples/cpp-console-online-rawdog-jit/: CMakeLists.txt  README.md
examples/sqlite-online-jit/: CMakeLists.txt  PLAN.md  README.md
experiments/gpu_batched_peeling_poc/: CMakeLists.txt  README.md  main.cu
src/: CMakeLists.txt  PerfectHash.cmake  PerfectHash.props  PerfectHash.sln  PerfectHashCuda.props  PerfectHashTable.props  PerfectHashTable.sln  PerfectHashVersion.rc  build-pgo-avx.bat  build-pgo-avx2.bat  build-pgo-avx512.bat  build-pgo-hooked.bat  build-pgo.bat  build-release-hooked.bat  build-release.bat  run-cmake-cuda.bat  run-cmake-cuda.sh  run-cmake.bat  run-cmake.sh  run-pgi.bat  update-pgd.bat
src/CompiledPerfectHashTable/: CompiledPerfectHashTableBenchmarkFull.c  CompiledPerfectHashTableBenchmarkFullExe.c  CompiledPerfectHashTableBenchmarkIndex.c  CompiledPerfectHashTableBenchmarkIndexExe.c  CompiledPerfectHashTableBenchmarkIndexInline.c  CompiledPerfectHashTableChm01IndexAddSubXorAnd.c  CompiledPerfectHashTableChm01IndexCrc32And.c  CompiledPerfectHashTableChm01IndexCrc32NotAnd.c  CompiledPerfectHashTableChm01IndexCrc32Rotate15And.c  CompiledPerfectHashTableChm01IndexCrc32RotateAnd.c  CompiledPerfectHashTableChm01IndexCrc32RotateWXYZAnd.c  CompiledPerfectHashTableChm01IndexCrc32RotateXAnd.c  CompiledPerfectHashTableChm01IndexCrc32RotateXYAnd.c  CompiledPerfectHashTableChm01IndexCrc32RotateXorAnd.c  CompiledPerfectHashTableChm01IndexDjbAnd.c  CompiledPerfectHashTableChm01IndexDjbXorAnd.c  CompiledPerfectHashTableChm01IndexDummyAnd.c  CompiledPerfectHashTableChm01IndexFnvAnd.c  CompiledPerfectHashTableChm01IndexJenkinsAnd.c  CompiledPerfectHashTableChm01IndexJenkinsModAnd.c  CompiledPerfectHashTableChm01IndexJenkinsModulus.c  CompiledPerfectHashTableChm01IndexMulshrolate1RXAnd.c  CompiledPerfectHashTableChm01IndexMulshrolate2RXAnd.c  CompiledPerfectHashTableChm01IndexMulshrolate3RXAnd.c  CompiledPerfectHashTableChm01IndexMulshrolate4RXAnd.c  CompiledPerfectHashTableChm01IndexMultiply643ShiftRAnd.c  CompiledPerfectHashTableChm01IndexMultiply644ShiftRAnd.c  CompiledPerfectHashTableChm01IndexMultiplyAnd.c  CompiledPerfectHashTableChm01IndexMultiplyRotateLRAnd.c  CompiledPerfectHashTableChm01IndexMultiplyRotateR2And.c  CompiledPerfectHashTableChm01IndexMultiplyRotateRAnd.c  CompiledPerfectHashTableChm01IndexMultiplyRotateRMultiplyAnd.c  CompiledPerfectHashTableChm01IndexMultiplyShiftLRAnd.c  CompiledPerfectHashTableChm01IndexMultiplyShiftR2And.c  CompiledPerfectHashTableChm01IndexMultiplyShiftRAnd.c  CompiledPerfectHashTableChm01IndexMultiplyShiftRMultiplyAnd.c  CompiledPerfectHashTableChm01IndexMultiplyShiftRXAnd.c  CompiledPerfectHashTableChm01IndexMultiplyXorAnd.c  CompiledPerfectHashTableChm01IndexRotateMultiplyXorRotate2And.c  CompiledPerfectHashTableChm01IndexRotateMultiplyXorRotateAnd.c  (+20 more)
src/FunctionHook/: CMakeLists.txt  FunctionHook.c  FunctionHook.def  FunctionHook.rc  FunctionHook.vcxproj  _penter_x64.asm  dllmain.c  stdafx.c  stdafx.h
src/PerfectHash/: BitManipulation.c  BitManipulation.h  BulkCreateBestCsv.h  BulkCreateCsv.h  CMakeLists.txt  CMakeLists_Text_RawCString.h  Chm01.c  Chm01.h  Chm01Async.c  Chm01Async.h  Chm01Compat.c  Chm01FileWork.c  Chm01FileWork.h  Chm01FileWorkBatchBuildSolutionFile.c  Chm01FileWorkCHeaderCompiledPerfectHashFile.c  Chm01FileWorkCHeaderCompiledPerfectHashMacroGlueFile.c  Chm01FileWorkCHeaderFile.c  Chm01FileWorkCHeaderNoSal2File.c  Chm01FileWorkCHeaderStdAfxFile.c  Chm01FileWorkCHeaderSupportFile.c  Chm01FileWorkCHeaderTypesFile.c  Chm01FileWorkCMakeListsTextFile.c  Chm01FileWorkCSourceBenchmarkFullExeFile.c  Chm01FileWorkCSourceBenchmarkFullFile.c  Chm01FileWorkCSourceBenchmarkIndexExeFile.c  Chm01FileWorkCSourceBenchmarkIndexFile.c  Chm01FileWorkCSourceDownsizedKeysFile.c  Chm01FileWorkCSourceFile.c  Chm01FileWorkCSourceKeysFile.c  Chm01FileWorkCSourceStdAfxFile.c  Chm01FileWorkCSourceSupportFile.c  Chm01FileWorkCSourceTableDataFile.c  Chm01FileWorkCSourceTableValuesFile.c  Chm01FileWorkCSourceTestExeFile.c  Chm01FileWorkCSourceTestFile.c  Chm01FileWorkCppHeaderOnlyFile.c  Chm01FileWorkCppHeaderOnlyTestFile.c  Chm01FileWorkCppSourceUnityFile.c  Chm01FileWorkCudaSourceFile.c  Chm01FileWorkGraphVertexPairsFile.c  (+473 more)
src/PerfectHashAsm/: CMakeLists.txt
src/PerfectHashBenchmark/: CMakeLists.txt  main.cpp
src/PerfectHashBenchmarkSingleExe/: main.c  stdafx.h
src/PerfectHashBulkCreateExe/: CMakeLists.txt  PerfectHashBulkCreateExe.c  stdafx.h  (+3 more)
tests/: CMakeLists.txt  PerfectHashArgvTests.cpp  PerfectHashBenchmarks.cpp  PerfectHashGraphImpl4TestConfig.h.in  PerfectHashIocpBufferPoolTests.cpp  PerfectHashOnlineJitInvalidEnv.cpp  PerfectHashOnlineJitTests.cpp  PerfectHashOnlineTests.cpp  nested_cmake_args.cmake  run_cli_assigned16_boundary_test.cmake  run_cli_chm02_cuda_generated_33000_test.cmake  run_cli_chm02_cuda_known_seed_test.cmake  run_cli_chm02_cuda_perf_benchmark.cmake  run_cli_codegen_test.cmake  run_cli_graphimpl4_codegen_test.cmake  run_cli_graphimpl4_downsized64_codegen_test.cmake  run_cli_test.cmake  run_gpu_poc_geometry_smoke_test.cmake  test_benchmark_gpu_solver.py
(+377 files in other folders)
