[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tpn-perfecthash"
dynamic = ["version"]
description = "Python CLI and API scaffolding for PerfectHash."
readme = "README-python.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
authors = [
  { name = "Trent Nelson" },
]
dependencies = [
  "pydantic>=2.11",
  "typer>=0.16",
]

[project.scripts]
ph = "perfecthash.cli:main"

[project.optional-dependencies]
analysis = [
  "bokeh>=3.0",
  "joypy>=0.2",
  "matplotlib>=3.9",
  "pyarrow>=19.0",
  "scipy>=1.15",
  "seaborn>=0.13",
]
dev = [
  "black>=24.10",
  "build>=1.2",
  "mypy>=1.15",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "ruff>=0.11",
]

[dependency-groups]
dev = [
  "black>=24.10",
  "build>=1.2",
  "mypy>=1.15",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.version]
source = "code"
path = "python/perfecthash/_version.py"
expression = "resolve_build_version()"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
include = [
  "/.pre-commit-config.yaml",
  "/hatch_build.py",
  "/LICENSE",
  "/README-python.md",
  "/pyproject.toml",
  "/python/perfecthash",
  "/python_tests",
]

[tool.hatch.build.targets.wheel]
packages = ["python/perfecthash"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["python", "python_tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["perfecthash"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["python_tests"]

[tool.mypy]
files = ["python", "python_tests"]
python_version = "3.12"
strict = true
warn_unused_configs = true
